<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notification_icon_ID"
        android:title="@string/LinearView_Horizontal"
        android:icon="@drawable/ic_add_alert_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete_icon_ID"
        android:title="@string/LinearView_Vertical"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:orderInCategory="100"

        app:showAsAction="never"/>
    <item
        android:id="@+id/GridView_ID"
        android:title="@string/GridView"
        android:icon="@drawable/ic_grid_on_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/stardGridViewHorizontalID"
        android:title="@string/stagrredView_horizontal"
        android:icon="@drawable/ic_view_quilt_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/stardGridViewVerticalID"
        android:title="@string/stagrredView_Vertical"
        android:icon="@drawable/ic_view_quilt_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>